errors/examples/BadCasing.java
public class BadCasing {

    public static void main() {
        System.out.println("Hi mom!");
        system.out.println("I'm writing Java!");
    }

}